--- a/views/user/dashboard.html
+++ b/views/user/dashboard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/header-style.css" />
     <link rel="stylesheet" href="/css/footer-style.css">
     <link rel="stylesheet" href="/css/loading-style.css" />
-    <link rel="stylesheet" href="/css/admin-dashboard.css" />
+    <link rel="stylesheet" href="/css/user-dashboard.css" />
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
@@ -52,11 +52,11 @@
             </h1>
             <div class="statics">
                 <div class="sales">
-                    <i class="fa-solid fa-chart-line"></i>
+                    <i class="fa-solid fa-coins"></i>
                     <p class="title">
-                        total sales
+                        my score
                         <br>
-                        <span class="num"> <span>0</span> ₪</span>
+                        <span class="num"> <span>0</span>
                     </p>
                 </div>
                 <div class="total-orders">
@@ -76,11 +76,7 @@
                     </p>
                 </div>
             </div>
-            <div class="recent-reservation">
-                <h1 class="title">reservations</h1>
-                <div class="messages-table">
-                </div>
-            </div>
+
         </div>
     </div>
     <!-- end header -->
@@ -92,7 +88,7 @@
     </div>
     <!-- end preloading -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/js/admin-dashboard.js"></script>
+    <script src="/js/user-dashboard.js"></script>
 </body>
 
 </html>
