--- a/css/admin-products.css
+++ b/css/admin-products.css
@@ -250,6 +250,7 @@ body {
 }
 .products-table .product-item {
   width: 100%;
+  height: 60px;
   overflow: hidden;
   margin-bottom: 15px;
   pointer-events: none;
@@ -287,6 +288,7 @@ body {
 .product-item .product-price {
   width: 30px;
 }
+
 .product-item .part {
   width: 100px;
   display: flex;
@@ -337,7 +339,7 @@ body {
   .product-item,
   .product-item button,
   .product-item .type-show{
-    font-size: 12px;
+    font-size: 14px;
   }
   .product-item .part input,
   .product-item label,
@@ -345,11 +347,15 @@ body {
   .product-item select,
   .product-item .type-show,
   .product-item {
-    font-size: 8px;
+    font-size: 12px;
+    padding:0  2px ;
   }
   .product-item img {
     width: 60px;
   }
+  .product-item .sign{
+    font-size: 8px;
+}
 }
 
 .new-product-btn {
@@ -369,10 +375,12 @@ body {
     height: 40px;
     font-size: 40px;
   }
+  
 }
 
 .more-details {
-  min-height: 500px;
+  min-height: 500px !important;
+  height: fit-content;
   display: flex !important;
   flex-direction: column;
   justify-content: space-between;
