--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -134,6 +134,7 @@
     <!-- end preloading -->
     <!-- connect javascript file -->
     <script src="/js/menu.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
