update sign up and login pages

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,20 +20,21 @@
 <body>
   <div class="container">
     <div class="login-container">
-      <h2 class="login-title">YKPO Cafe</h2>
+      <h2 class="login-title"><a href="home">YKPO Café</a></h2>
       <form class="login-form" id="login-form">
         <div class="email-container">
           <i class="fa-solid fa-user"></i>
-          <input type="email" name="email" class="email" placeholder="Email" autocomplete="off" required />
+          <input type="email" name="email" class="email input-style" placeholder="Email" autocomplete="off" required />
         </div>
         <!-- I need this one to show error message in page -->
         <div class="password-container">
           <i class="fa-solid fa-key"></i>
-          <input type="password" name="password" class="password" placeholder="Password" autocomplete="off" required/>
+          <input type="password" name="password" class="password input-style" placeholder="Password" autocomplete="off"
+            required />
         </div>
         <p class="error" name="errorMsg">the username or password is not correct. please try again</p>
         <!-- I need this one to show error message in page -->
-        <input type="submit" value="Login" class="login-btn"/>
+        <input type="submit" value="Login" class="login-btn" />
       </form>
       <p>Doesn't have account ? <a href="signup">Signup</a></p>
     </div>
