--- a/css/signup-style.css
+++ b/css/signup-style.css
@@ -6,8 +6,28 @@
   --font-color: white;
   --large-font-size: 30px;
   --small-font-size: 14px;
-
   --radius-deg: 18px;
+  --color-background: #f6f6f9;
+  --color-white: #fff;
+  --color-dark: #363949;
+  --color-light: rgba(132, 139, 200, 0.18);
+  --main-font: "Merienda", cursive;
+  --color-danger: #ff7782;
+  --color-success: #41f1b6;
+  --color-warning: #ffbb55;
+  /* --color-info-dark: #7d8da1; */
+  /* --color-info-light: #dce1eb; */
+  --color-primary-variant: #111e88;
+  --aside-links-size: 20px;
+  --aside-links-color: #8895a7;
+  --card-border-radius: 32px;
+  --border-radius-1: 6.4px;
+  --border-radius-2: 12.8px;
+  --border-radius-3: 19.2px;
+  --card-padding: 28.8px;
+  --padding-1: 19.2;
+  --statics-font: poppins, sans-serif;
+  --box-shadow: 0 32px 48px var(--color-light);
 }
 /* End global varibales */
 
@@ -39,23 +59,27 @@ img {
 }
 
 body {
-  /*background-color: var(--background-main-color);
-  */
+  text-decoration: none;
+}
+a {
+  color: var(--color-dark);
 }
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url('/images/IMG_6452.PNG');
-  background-repeat: no-repeat;
-  background-size: cover;
+  /* background-image: url("/images/IMG_6452.PNG");
+  background-repeat: no-repeat; */
+  /* background-size: cover; */
+  background-color: #ddd;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .signup-container {
-  min-width: 200px;
-  max-width: fit-content;
+  min-width: 280px;
+  max-width: 400px;
+  width: fit-content;
   margin: 10px auto;
   display: flex;
   justify-content: center;
@@ -63,85 +87,118 @@ body {
   flex-wrap: wrap;
   flex-direction: column;
   text-align: center;
-  border: 2px solid var(--front-main-color);
   padding: 20px;
-  border-radius: var(--radius-deg);
-  -webkit-border-radius: var(--radius-deg);
-  -moz-border-radius: var(--radius-deg);
-  -ms-border-radius: var(--radius-deg);
-  background-color: rgba(0, 0, 0, 0.182);
-  box-shadow: 0 0 30px 5px black;
-  backdrop-filter: blur(15px);
+  background-color: var(--color-white);
+  box-shadow: var(--box-shadow);
+  border-radius: var(--border-radius-3);
+  -webkit-border-radius: var(--border-radius-3);
+  -moz-border-radius: var(--border-radius-3);
+  -ms-border-radius: var(--border-radius-3);
+  -o-border-radius: var(--border-radius-3);
 }
 .signup-title {
-  color: var(--font-color);
+  color: var(--color-dark);
   font-size: var(--large-font-size);
-  text-shadow: 3px 4px 10px black;
+  cursor: pointer;
 }
 .input-field-container {
   display: block;
   width: 100%;
 }
 .signup-container i {
-  color: var(--font-color);
-  font-size: 20px;
+  color: var(--color-dark);
+  font-size: 18px;
 }
+.passwordHint {
+  padding-left: 20px;
+  text-transform: capitalize;
+  display: block;
+  width: 100%;
+  font-size: 10px;
+  font-family: var(--statics-font);
+  text-align: start;
+  color: rgba(0, 128, 0, 0.754);
+  line-height: 5px;
+}
+
 .input-style {
-  background-color: var(--front-main-color);
-  padding: 15px;
-  font-size: 20px;
-  border-radius: var(--radius-deg);
-  -webkit-border-radius: var(--radius-deg);
-  -moz-border-radius: var(--radius-deg);
-  -ms-border-radius: var(--radius-deg);
-  -o-border-radius: var(--radius-deg);
-  border: 1px solid var(--front-main-color);
-  background-color: rgba(0, 0, 0, 0.189);
-  /* box-shadow: 0 0 5px 0px white; */
-  color: var(--font-color);
-  width: 70%;
+  text-transform: capitalize;
+  height: 40px;
+  width: 250px;
+  border: 0.5px solid gray;
+  border-radius: var(--border-radius-2);
+  -webkit-border-radius: var(--border-radius-2);
+  -moz-border-radius: var(--border-radius-2);
+  -ms-border-radius: var(--border-radius-2);
+  -o-border-radius: var(--border-radius-2);
+  box-shadow: 0px 5px 25px var(--color-light);
+  margin: 2px;
+  padding: 0 10px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  font-family: var(--statics-font);
 }
-.signup-container .input-style:hover {
-  transition-duration: 1s;
-  border: 1px solid var(--font-color);
+.input-style:focus {
+  box-shadow: none;
+  /* border: none; */
+  /* outline: 1px solid orangered; */
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
 }
-.signup-container input::placeholder {
-  color: white;
-  opacity: 0.7;
-  font-size: var(--small-font-size);
-  font-family: var(--main-font);
+.input-style:focus::placeholder {
+  transition: 0.3s;
+  opacity: 0%;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
 }
+.email {
+  text-transform: lowercase;
+}
+
+.valid {
+  border: 0.5px solid green;
+  /* outline-color: green !important; */
+}
+.notValid {
+  border: 0.5px solid red;
+}
+
 form * {
   margin: 10px;
 }
 form .signup-btn {
-  padding: 10px 30px;
-  border-radius: var(--radius-deg);
-  -webkit-border-radius: var(--radius-deg);
-  -moz-border-radius: var(--radius-deg);
-  -ms-border-radius: var(--radius-deg);
-  -o-border-radius: var(--radius-deg);
-  background-color: transparent;
-  color: black;
-  border: 1px solid var(--front-main-color);
-  box-shadow: 0px 0px 5px black;
+  padding: 15px 35px;
+  background-color: var(--color-dark);
+  color: var(--color-white);
+  text-transform: capitalize;
+  box-shadow: var(--box-shadow);
 }
 form .signup-btn:hover {
   transition-duration: 0.5s;
   background-color: var(--front-main-color);
   color: var(--font-color);
+  box-shadow: none;
 }
 .signup-container .signup-title {
   padding: 25px;
 }
 .signup-container p {
   margin-top: 15px;
-  color: var(--font-color);
+  color: var(--color-dark);
+  font-family: var(--statics-font);
   font-size: var(--small-font-size);
 }
 .signup-container p a {
-  color: var(--front-main-color);
-  text-shadow: 3px 2px 4px black;
+  color: orangered;
+  font-weight: bold;
 }
 
 /* loading animation */
