--- a/css/reservation.css
+++ b/css/reservation.css
@@ -99,11 +99,12 @@ body {
   box-shadow: var(--box-shadow);
 }
 .reservation-container form textarea {
-  text-transform: capitalize;
+  text-transform: initial;
   font-size: 18px;
   font-family: var(--statics-font);
   padding: 5px;
   box-shadow: var(--box-shadow);
+  resize: none;
 }
 .reservation-container form .person-name {
   grid-area: 2/1 / span 1 / span 1;
