--- a/css/admin-products.css
+++ b/css/admin-products.css
@@ -223,6 +223,7 @@ body {
     -moz-border-radius: var(--border-radius-1);
     -ms-border-radius: var(--border-radius-1);
     -o-border-radius: var(--border-radius-1);
+    height: fit-content;
   }
 }
 
@@ -250,7 +251,7 @@ body {
   column-gap: 5px;
   row-gap: 30px;
 }
-.products-table .product {
+ .products-table .product {
   width: 250px;
   height: 350px;
   overflow: hidden;
@@ -264,16 +265,9 @@ body {
   padding: 10px;
   text-transform: capitalize;
   border: 1px solid var(--product-background-color);
-  box-shadow: var(--box-shadow);
+  box-shadow: 0 32px 48px rgb(132 139 200 / 18%);
 }
-.product input{
-  font-size: 14px;
-}
-.product .part{
-  font-size: 14px;
-}
-
-.product .product-img  {
+.products-table .product .product-img {
   overflow: hidden;
   width: 100%;
   height: 60%;
@@ -282,21 +276,52 @@ body {
   width: 228.4px;
   height: 179.04px;
 }
-.product .product-id {
+.product .product-id , .product .type{
   display: none;
 }
-.product .product-title{
-  text-overflow: ellipsis;
+.product .product-info {
   width: 100%;
+  height: 30%;
+}
+.product .product-info .prodcut-title {
+  text-transform: capitalize;
+  font-weight: bold;
+  margin-bottom: 9px;
+  font-size: var(--product-font-size);
+}
+.product .product-info .product-description {
+  text-transform: capitalize;
   font-size: 14px;
-  font-family: var(--statics-font);
+  color: var(--description-color);
 }
-.product .product-desc{
-    height: 65px;
-    text-overflow: ellipsis;
-    
+.product .price {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-
+.product .price p {
+  font-weight: bold;
+}
+.product .price p span {
+  width: 40px;
+  overflow: hidden;
+}
+.product .price button {
+  width: 100px;
+  height: 33px;
+  background-color: transparent;
+  border: 1px solid var(--button-color);
+  color: var(--button-color);
+  border-radius: var(--button-radius-deg);
+  transition-duration: 0.4s;
+}
+.product .price button:hover {
+  background-color: var(--button-color);
+  color: var(--main-background-color);
+}
 
 /* more details page */
 .hide-content {
@@ -354,6 +379,16 @@ body {
   height: 100%;
   display: flex;
   flex-wrap: wrap;
+  padding: 15px;
+  transition: 0.3s;
+  -webkit-transform:;
+  -moz-transform:;
+  -ms-transform:;
+  -o-transform:;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
 }
 .more-details-active form .labels{
   width: 30%;
@@ -394,12 +429,12 @@ body {
   text-transform: capitalize;
   
 }
-.more-details-active .input-fields .input-section input,.more-details-active .input-fields .input-section textarea{
-  margin: 1px 5px;
-}
+ .more-details-active .input-fields{
+  pointer-events: none;
+ }
 .more-details-active .input-fields .input-section textarea{
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   resize: none;
 }
 .more-details-active .input-fields .input-section .type-show{
@@ -411,8 +446,11 @@ body {
   display: none;
 }
 .more-details-active .product-price{
-  max-width: 45px;
+  max-width: 55px;
   width: fit-content;
+}
+.more-details-active .input-section img{
+      height: 100%;
 }
 
 .more-details-active .buttons{
@@ -428,7 +466,45 @@ body {
 .buttons .save-btn,.buttons .edit-btn{
   background-color: rgba(255, 68, 0, 0.799);
 }
-
+.buttons .save-btn,.buttons .cancel-btn{
+  display: none;
+}
+.on-edit .product-title,.on-edit .product-price, .on-edit textarea{
+  border-radius: var(--border-radius-3);
+  -webkit-border-radius: var(--border-radius-3);
+  -moz-border-radius: var(--border-radius-3);
+  -ms-border-radius: var(--border-radius-3);
+  -o-border-radius: var(--border-radius-3);
+  border: 1px solid var(--color-dark);
+  padding: 2px 7px;
+}
+.on-edit img{
+  display: none;
+}
+.on-edit .type-show{
+  display: none;
+}
+.on-edit select{
+  border: 1px solid var(--color-dark);
+  border-radius: var(--border-radius-3);
+  padding: 5px;
+  -webkit-border-radius: var(--border-radius-3);
+  -moz-border-radius: var(--border-radius-3);
+  -ms-border-radius: var(--border-radius-3);
+  -o-border-radius: var(--border-radius-3);
+}
+.on-edit .display-none{
+  display: block;
+}
+.on-edit .input-fields{
+  pointer-events: painted;
+}
+.on-edit .buttons .save-btn, .on-edit .cancel-btn {
+  display: block;
+}
+.on-edit .edit-btn , .on-edit .done-btn{
+  display: none;
+}
 
 @media (max-width:600px) {
   .more-details-active{
