finished admin dashboard with checkout page

--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -60,7 +60,7 @@
                         <div class="label">total </div>
                         <div class="price">
                             <div class="number"></div>
-                            <div class="sign">$</div>
+                            <div class="sign">₪</div>
                         </div>
                     </div>
                 </div>
